[package]
name = "ring-algorithm"
version = "0.7.0"
authors = ["Toru3 <ryuutet@gmail.com>"]
edition = "2021"
description = "algorithms on ring (Abstruct Algebra)"
license = "AGPL-3.0-or-later"
documentation = "https://docs.rs/ring-algorithm/"
homepage = "https://crates.io/crates/ring-algorithm"
repository = "https://gitlab.com/Toru3/ring-algorithm"
readme = "README.md"
keywords = ["algorithm", "ring", "algebra"]
categories = ["algorithms", "mathematics"]
rust-version = "1.74.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.19"
num-bigint = { version = "0.4.6", optional = true }
rug = { version = "1.27.0", features = ["num-traits"], optional = true }
[dev-dependencies]
criterion = { version = "0.3.6", features = ["html_reports"] }
is-prime-for-primitive-int = "0.5.1"
num = "0.4.3"
polynomial-ring = "0.5.0"
rand = "0.9.0"
[features]
default = []
__internal_inject_debug = [] # DO NOT USE
[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "katex.html",
]
[[bench]]
name = "bench"
harness = false
required-features = ["rug"]
